tooling/nargo_cli/tests/snapshots/execution_failure/brillig_constant_oob_array_set/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:6:5
  │
6 │     array[index()] = value;
  │     --------------
  │
  = Call stack:
    1: main
            at src/main.nr:6:5

Failed assertion
