tooling/nargo_cli/tests/snapshots/execution_failure/brillig_constant_oob_array_set/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 1000000000 is out of bounds for the array of length 4
  ┌─ src/main.nr:6:5
  │
6 │     array[index()] = value;
  │     --------------
  │

Error interpreting main function
